--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "test": "echo '[*] No tests defined'"
   },
   "dependencies": {
-    "particles.js": "^2.0.0"
+    "tsparticles": "^1.12.10"
   },
   "devDependencies": {
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "typescript": "^3.7.2"
+    "typescript": "^3.8.3"
   }
 }
